update bidning for closing

--- a/hypr/custom.d/regular/binds.conf
+++ b/hypr/custom.d/regular/binds.conf
@@ -5,7 +5,7 @@
 bind = $mainMod, Return, exec, $terminal
 
 unbind = $mainMod, Q
-bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, Q, killactive,
 
 
 unbind = $mainMod, R
