update hyprland settings

--- a/hypr/custom.d/regular/binds.conf
+++ b/hypr/custom.d/regular/binds.conf
@@ -7,8 +7,8 @@ bind = $mainMod, Return, exec, $terminal
 unbind = $mainMod, Q
 bind = $mainMod SHIFT, Q, killactive,
 
-
 unbind = $mainMod, R
+unbind = $mainMod CTRL, Return
 bind = $mainMod CTRL, Return, exec, $menu
 
 bind = $mainMod, B, exec, $browser
