--- a/hypr/custom.d/regular/settings.conf
+++ b/hypr/custom.d/regular/settings.conf
@@ -6,6 +6,7 @@ input {
     kb_options = grp:win_space_toggle
     numlock_by_default = true
     follow_mouse = 2
+    float_switch_override_focus = 0
     mouse_refocus=false
     touchpad {
         natural_scroll = false
